--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Lucas Martins</title>
 </head>
 <body>
-	<h1 style="text-align:center;">Bem-vindo(a) a minha página!</h1>
-
-	<p style="text-align:center;">Olá, meu nome é Lucas Martins</p>
+    teste
 </body>
 </html>
