--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="./css/style.css">
+
     <title>Lucas Martins</title>
 </head>
-<body>
-    <h1 style="text-align:center;">Bem-vindo(a) a minha página!</h1>
 
-	<p style="text-align:center;">Olá, meu nome é Lucas Martins</p>
+<body>
+    <h1>Welcome my page!</h1>
+
+    <p class="p-center">Hello, my name is Lucas Martins</p>
 </body>
+
 </html>
